--- a/admin/instances.html
+++ b/admin/instances.html
@@ -63,7 +63,7 @@
 
 
           <!-- Topbar Navbar -->
-          <ul class="navbar-nav ml-auto">
+          <ul class="navbar-nav ml-auto"> 
 
             <li class="nav-item dropdown no-arrow" id="remoteListNav">
             </li>
@@ -71,9 +71,17 @@
             <li class="nav-item dropdown no-arrow" id="projectListNav">
             </li>
 
-            <div class="nav-item spinner-grow text-primary m-3" role="status" style="display:none;" id="spinner">
-              <span class="nav-item sr-only">Loading...</span>
-            </div>
+            <li>
+              <div class="nav-item spinner-grow text-primary m-3" role="status" style="display:none;" id="spinner">
+                <span class="nav-item sr-only">Loading...</span>
+              </div>
+            </li>
+
+            <li class="nav-item dropdown no-arrow" id="notificationArea" style="display: none;">
+              <div class="nav-link dropdown-toggle">
+                <span id="notification" class="mr-2 d-none d-lg-inline text-gray-600 small">Notification</span>
+              </div>
+            </li>
 
             <div class="topbar-divider d-none d-sm-block"></div>
 
@@ -116,13 +124,10 @@
                 <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
                   <h6 class="m-0 font-weight-bold text-primary">Instances</h6>
                   <div class="dropdown no-arrow">
-                    <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
+                    <a class="dropdown-toggle" href="#" data-toggle="modal" data-target="#launchInstanceModal">
+                      <i class="fas fa-plus fa-sm fa-fw"></i>
+                      New Instance
                     </a>
-                    <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in" aria-labelledby="dropdownMenuLink">
-                      <div class="dropdown-header">Options:</div>
-                      <a class="dropdown-item" href="#" data-toggle="modal" data-target="#launchInstanceModal">Launch Instance</a>
-                    </div>
                   </div>
                 </div>
                 <!-- Card Body -->
@@ -247,38 +252,48 @@
   const urlParams = new URLSearchParams(queryString);
   const remoteName = urlParams.get('remote');
   const projectName = urlParams.get('project');
-  var operationNumber = "";
+  var operationNumbers = [];
 
   function operationStatusCheck(){
-    if (operationNumber != ""){
-      $.get("./php/lxd/operation-status.php?remote=" + encodeURI(remoteName) + "&id=" + encodeURI(operationNumber) , function (data) {
-        var operationData = JSON.parse(data);
-        console.log(operationData);
-        if (operationData.error_code == 404) { 
-          operationNumber = "";
-          $('#spinner').hide();
-          reloadPageContent();
-        } 
-        if (operationData.status_code == 200) {
-          if (operationData.metadata.status_code == 200){
-            operationNumber = "";
-            $('#spinner').hide();
+    operationNumbers = operationNumbers.filter(function(e){return e}); 
+    var numberOfOperations = operationNumbers.length;
+    if (numberOfOperations > 0){
+      $('#spinner').show();
+      for (i = 0; i < numberOfOperations; i++){
+        var elementNumber = i;
+        $.get("./php/lxd/operation-status.php?remote=" + encodeURI(remoteName) + "&id=" + encodeURI(operationNumbers[elementNumber]) , function (data) {
+          var operationData = JSON.parse(data);
+          console.log(operationData);
+          if (operationData.error_code == 404) { 
+            operationNumbers[elementNumber] = undefined;
             reloadPageContent();
           }
-          if (operationData.metadata.status_code >= 400){
-            operationNumber = "";
-            $('#spinner').hide(); 
-            alert(operationData.metadata.err);
-            reloadPageContent();
-          }
-        }
-      }); 
-    }
-    if (operationNumber != "") {
+          if (operationData.status_code == 200) {
+            if (operationData.metadata.status_code == 103){
+              $('#notificationArea').show();
+              $('#notification').text(operationData.metadata.description);
+            }
+            if (operationData.metadata.status_code == 200){
+              operationNumbers[elementNumber] = undefined;
+              reloadPageContent();
+            }
+            if (operationData.metadata.status_code >= 400){
+              operationNumbers[elementNumber] = undefined;
+              alert(operationData.metadata.err);
+              reloadPageContent();
+            }
+          } 
+        });
+      }
       setTimeout(() => { operationStatusCheck(); }, 4000);
     }
+    else {
+      $('#spinner').hide();
+      $('#notificationArea').hide();
+      $('#notification').text("");
+    }
   }
-  
+
   function loadPageContent(){
     $('#instanceListTable').DataTable( {
       ajax: "./php/lxd/instance-list.php?remote=" + encodeURI(remoteName) + "&project=" + encodeURI(projectName),
@@ -312,8 +327,8 @@
       var operationData = JSON.parse(data);
       console.log(operationData);
       if (operationData.status_code == 100 && operationData.metadata.status_code < 400){
-        $('#spinner').show();
-        operationNumber = operationData.metadata.id;
+        operationNumbers.push(operationData.metadata.id);
+        operationStatusCheck();
       }
       if (operationData.metadata.status_code >= 400){
         alert(operationData.metadata.err);
@@ -331,8 +346,8 @@
       var operationData = JSON.parse(data);
       console.log(operationData);
       if (operationData.status_code == 100 && operationData.metadata.status_code < 400){
-        $('#spinner').show();
-        operationNumber = operationData.metadata.id;
+        operationNumbers.push(operationData.metadata.id);
+        operationStatusCheck();
       }
       if (operationData.metadata.status_code >= 400){
         alert(operationData.metadata.err);
@@ -347,8 +362,8 @@
       var operationData = JSON.parse(data);
       console.log(operationData);
       if (operationData.status_code == 100 && operationData.metadata.status_code < 400){
-        $('#spinner').show();
-        operationNumber = operationData.metadata.id;
+        operationNumbers.push(operationData.metadata.id);
+        operationStatusCheck();
       }
       if (operationData.metadata.status_code >= 400){
         alert(operationData.metadata.err);
