--- a/admin/profiles.html
+++ b/admin/profiles.html
@@ -62,8 +62,8 @@
 
 
 
-          <!-- Topbar Navbar -->
-          <ul class="navbar-nav ml-auto">
+           <!-- Topbar Navbar -->
+           <ul class="navbar-nav ml-auto"> 
 
             <li class="nav-item dropdown no-arrow" id="remoteListNav">
             </li>
@@ -71,9 +71,17 @@
             <li class="nav-item dropdown no-arrow" id="projectListNav">
             </li>
 
-            <div class="nav-item spinner-grow text-primary m-3" role="status" style="display:none;" id="spinner">
-              <span class="nav-item sr-only">Loading...</span>
-            </div>
+            <li>
+              <div class="nav-item spinner-grow text-primary m-3" role="status" style="display:none;" id="spinner">
+                <span class="nav-item sr-only">Loading...</span>
+              </div>
+            </li>
+
+            <li class="nav-item dropdown no-arrow" id="notificationArea" style="display: none;">
+              <div class="nav-link dropdown-toggle">
+                <span id="notification" class="mr-2 d-none d-lg-inline text-gray-600 small">Notification</span>
+              </div>
+            </li>
 
             <div class="topbar-divider d-none d-sm-block"></div>
 
@@ -116,13 +124,10 @@
                 <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
                   <h6 class="m-0 font-weight-bold text-primary">Profiles</h6>
                   <div class="dropdown no-arrow">
-                    <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
+                    <a class="dropdown-toggle" href="#" data-toggle="modal" data-target="#createProfileModal">
+                      <i class="fas fa-plus fa-sm fa-fw"></i>
+                      New Profile
                     </a>
-                    <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in" aria-labelledby="dropdownMenuLink">
-                      <div class="dropdown-header">Options:</div>
-                      <a class="dropdown-item" href="#" data-toggle="modal" data-target="#createProfileModal">Create Profile</a>
-                    </div>
                   </div>
                 </div>
                 <!-- Card Body -->
@@ -312,8 +317,6 @@
   const projectName = urlParams.get('project'); 
   var profileToUpdate = "";
 
-
-
   function loadPageContent(){
     $('#profileListTable').DataTable( {
       ajax: "./php/lxd/profile-list.php?remote=" + encodeURI(remoteName) + "&project=" + encodeURI(projectName),
@@ -419,8 +422,6 @@
       setTimeout(() => { reloadPageContent(); }, 1000);
     });
   }
-
-
 
   $(document).ready(function(){
 
