--- a/admin/images.html
+++ b/admin/images.html
@@ -96,6 +96,10 @@
                   <i class="fas fa-server fa-sm fa-fw mr-2 text-gray-400"></i>
                   Hosts
                 </a>
+                <a class="dropdown-item" href="#" onclick="logout()">
+                  <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
+                  Logout
+                </a>
               </div>
             </li>
 
@@ -275,6 +279,13 @@
   var operationNumbers = [];
   var imageToUpdate = "";
 
+  function logout(){
+    var http = new XMLHttpRequest();
+    http.open("get", "../admin", false, "null", "null");
+    http.send("");
+    window.location.replace("../index.html");
+  }
+
   function operationStatusCheck(){
     operationNumbers = operationNumbers.filter(function(e){return e}); 
     var numberOfOperations = operationNumbers.length;
@@ -316,6 +327,13 @@
   }
 
   function loadPageContent(){
+    //Check Authorization
+    $.get("./php/auth/auth-check.php", function (data) {
+      if(data != "true"){
+       window.location.replace("../index.html");
+      }
+    });
+
      $('#imageListTable').DataTable( {
       ajax: "./php/lxd/image-list.php?remote=" + encodeURI(remoteName) + "&project=" + encodeURI(projectName),
       columns: [
