--- a/admin/instances.html
+++ b/admin/instances.html
@@ -96,6 +96,10 @@
                   <i class="fas fa-server fa-sm fa-fw mr-2 text-gray-400"></i>
                   Hosts
                 </a>
+                <a class="dropdown-item" href="#" onclick="logout()">
+                  <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
+                  Logout
+                </a>
               </div>
             </li>
 
@@ -254,6 +258,13 @@
   const projectName = urlParams.get('project');
   var operationNumbers = [];
 
+  function logout(){
+    var http = new XMLHttpRequest();
+    http.open("get", "../admin", false, "null", "null");
+    http.send("");
+    window.location.replace("../index.html");
+  }
+
   function operationStatusCheck(){
     operationNumbers = operationNumbers.filter(function(e){return e}); 
     var numberOfOperations = operationNumbers.length;
@@ -295,6 +306,14 @@
   }
 
   function loadPageContent(){
+
+    //Check Authorization
+    $.get("./php/auth/auth-check.php", function (data) {
+      if(data != "true"){
+       window.location.replace("../index.html");
+      }
+    });
+
     $('#instanceListTable').DataTable( {
       ajax: "./php/lxd/instance-list.php?remote=" + encodeURI(remoteName) + "&project=" + encodeURI(projectName),
       columns: [
