--- a/admin/simplestreams.html
+++ b/admin/simplestreams.html
@@ -96,6 +96,10 @@
                   <i class="fas fa-server fa-sm fa-fw mr-2 text-gray-400"></i>
                   Hosts
                 </a>
+                <a class="dropdown-item" href="#" onclick="logout()">
+                  <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
+                  Logout
+                </a>
               </div>
             </li>
 
@@ -172,7 +176,7 @@
 
   <!-- Add Simplestreams Modal-->
   <div class="modal fade" id="addSimplestreamsModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="exampleModalLabel">Add Simplestreams Host</h5>
@@ -183,19 +187,19 @@
         <div class="modal-body">
 
           <div class="row">
-            <label class="col-4 col-form-label text-right">URL: </label>
-            <div class="col-8">
+            <label class="col-2 col-form-label text-right">URL: </label>
+            <div class="col-9">
               <div class="form-group">
-                <input type="text" class="form-control" id="hostInput" required="required" placeholder="https://images.linuxcontainers.org" name="host">
+                <input type="text" class="form-control" id="hostInput" required="required" placeholder="URL" name="host">
               </div>
             </div>
           </div>
 
           <div class="row">
-            <label class="col-4 col-form-label text-right">Alias: </label>
-            <div class="col-8">
+            <label class="col-2 col-form-label text-right">Alias: </label>
+            <div class="col-9">
               <div class="form-group">
-                <input type="text" class="form-control"  id="aliasInput" placeholder="Enter name of server" name="alias">
+                <input type="text" class="form-control"  id="aliasInput" placeholder="Alias" name="alias">
               </div>
             </div>
           </div>
@@ -229,9 +233,24 @@
   const queryString = window.location.search;
   const urlParams = new URLSearchParams(queryString);
   const remoteName = urlParams.get('remote'); 
-  const projectName = urlParams.get('project'); 
+  const projectName = urlParams.get('project');
+
+  function logout(){
+    var http = new XMLHttpRequest();
+    http.open("get", "../admin", false, "null", "null");
+    http.send("");
+    window.location.replace("../index.html");
+  }
 
   function loadPageContent(){
+
+    //Check Authorization
+    $.get("./php/auth/auth-check.php", function (data) {
+      if(data != "true"){
+       window.location.replace("../index.html");
+      }
+    });
+
     $('#simplestreamsListTable').DataTable( {
       ajax: "./php/lxd/simplestreams-list.php?remote=" + encodeURI(remoteName) + "&project=" + encodeURI(projectName),
       columns: [
