--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu">
-
+  <meta http-equiv='cache-control' content='no-cache'> 
+  <meta http-equiv='expires' content='0'> 
+  <meta http-equiv='pragma' content='no-cache'> 
   <title>LXDWARE - Welcome</title>
   <style>
     body, html {
@@ -69,14 +71,34 @@
       color:white;
     }
 
+    input[type=text], input[type=password] {
+      width: 100%;
+      padding: 12px 20px;
+      margin: 8px 0;
+      display: inline-block;
+      border: 1px solid #ccc;
+      box-sizing: border-box;
+    }
+
     input[type=submit] {
-    background-color: #e95420 !important;
-    border-color: #e95420 !important;
-    color: #fff !important;
+      background-color: #e95420 !important;
+      color: #fff !important;
+      padding: 14px 20px;
+      margin: 8px 0;
+      border: none;
+      cursor: pointer;
+      width: 100%;
+    }
+
+    form {
+      text-align: left;
+      margin: 25px;
+      margin-top: 50px;
     }
     
   </style>
 </head>
+
 
 <body>
   <div class="bg">
@@ -89,9 +111,13 @@
       <h1>Welcome</h1>
       <hr>
       <p>Take control of your virtual infrastructure.</p>
-      <br />
-      <form action="./admin/index.html">
-        <input type="submit" value="Login">
+
+      <form onsubmit="return false">
+        Username:
+        <input type="text" name="username" id="username" autofocus> <br />
+        Password:
+        <input type="password" name="password" id="password"> <br />
+        <input type="submit" onclick="login()" value="Login">
       </form>
     </div>
 
@@ -101,5 +127,31 @@
 
   </div>
 </body>
+
+<script>
+
+  function login() {
+    var username = document.getElementById("username").value;
+    var password = document.getElementById("password").value;
+    //Preventing action in no username or password exist to prevent HTTP Basic Auth cached page credentials
+    if (username != "" && password != ""){
+      var http = new XMLHttpRequest();
+      //Generating unique value for url to prevent HTTP Basic Auth cached page credentials from loading cached page without logging in.
+      var unixTime = Math.round(+new Date()/1000);
+      var url = "./admin/index.html?authVal=" + unixTime;
+      http.open("get", url, false, username, password);
+      http.send();
+      if (http.status == 200) {
+        document.location = url;
+      } 
+      else {
+        alert("Incorrect username and/or password!");
+      }
+    }
+    return false;
+  }
+
+</script>
+
 
 </html>
